parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA
Rule 5     statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA
Rule 6     expression -> IDENTIFICADOR
Rule 7     expression -> NUMERO
Rule 8     expression -> STRING
Rule 9     expression -> INTERPOLATED_STRING
Rule 10    expression -> expression OPERADOR_ARITMETICO expression
Rule 11    expression -> expression CONCATENACAO expression
Rule 12    expression -> PARENTESES_ESQ expression PARENTESES_DIR
Rule 13    expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR
Rule 14    expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

Terminals, with rules where they appear

ALEATORIO            : 14
ATRIBUICAO           : 4
CONCATENACAO         : 11
ENTRADA              : 13
ESCREVER             : 5
IDENTIFICADOR        : 4 6
INTERPOLATED_STRING  : 9
NUMERO               : 7
OPERADOR_ARITMETICO  : 10
PARENTESES_DIR       : 5 12 13 14
PARENTESES_ESQ       : 5 12 13 14
PONTO_E_VIRGULA      : 4 5
STRING               : 8
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 10 10 11 11 12 14
program              : 0
statement            : 2 3
statement_list       : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA
    (5) statement -> . ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA

    IDENTIFICADOR   shift and go to state 4
    ESCREVER        shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA
    (5) statement -> . ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFICADOR   shift and go to state 4
    ESCREVER        shift and go to state 5

    statement                      shift and go to state 6

state 3

    (3) statement_list -> statement .

    IDENTIFICADOR   reduce using rule 3 (statement_list -> statement .)
    ESCREVER        reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> IDENTIFICADOR . ATRIBUICAO expression PONTO_E_VIRGULA

    ATRIBUICAO      shift and go to state 7


state 5

    (5) statement -> ESCREVER . PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA

    PARENTESES_ESQ  shift and go to state 8


state 6

    (2) statement_list -> statement_list statement .

    IDENTIFICADOR   reduce using rule 2 (statement_list -> statement_list statement .)
    ESCREVER        reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 7

    (4) statement -> IDENTIFICADOR ATRIBUICAO . expression PONTO_E_VIRGULA
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 10

state 8

    (5) statement -> ESCREVER PARENTESES_ESQ . expression PARENTESES_DIR PONTO_E_VIRGULA
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 17

state 9

    (6) expression -> IDENTIFICADOR .

    PONTO_E_VIRGULA reduce using rule 6 (expression -> IDENTIFICADOR .)
    OPERADOR_ARITMETICO reduce using rule 6 (expression -> IDENTIFICADOR .)
    CONCATENACAO    reduce using rule 6 (expression -> IDENTIFICADOR .)
    PARENTESES_DIR  reduce using rule 6 (expression -> IDENTIFICADOR .)


state 10

    (4) statement -> IDENTIFICADOR ATRIBUICAO expression . PONTO_E_VIRGULA
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

    PONTO_E_VIRGULA shift and go to state 18
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20


state 11

    (7) expression -> NUMERO .

    PONTO_E_VIRGULA reduce using rule 7 (expression -> NUMERO .)
    OPERADOR_ARITMETICO reduce using rule 7 (expression -> NUMERO .)
    CONCATENACAO    reduce using rule 7 (expression -> NUMERO .)
    PARENTESES_DIR  reduce using rule 7 (expression -> NUMERO .)


state 12

    (8) expression -> STRING .

    PONTO_E_VIRGULA reduce using rule 8 (expression -> STRING .)
    OPERADOR_ARITMETICO reduce using rule 8 (expression -> STRING .)
    CONCATENACAO    reduce using rule 8 (expression -> STRING .)
    PARENTESES_DIR  reduce using rule 8 (expression -> STRING .)


state 13

    (9) expression -> INTERPOLATED_STRING .

    PONTO_E_VIRGULA reduce using rule 9 (expression -> INTERPOLATED_STRING .)
    OPERADOR_ARITMETICO reduce using rule 9 (expression -> INTERPOLATED_STRING .)
    CONCATENACAO    reduce using rule 9 (expression -> INTERPOLATED_STRING .)
    PARENTESES_DIR  reduce using rule 9 (expression -> INTERPOLATED_STRING .)


state 14

    (12) expression -> PARENTESES_ESQ . expression PARENTESES_DIR
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 21

state 15

    (13) expression -> ENTRADA . PARENTESES_ESQ PARENTESES_DIR

    PARENTESES_ESQ  shift and go to state 22


state 16

    (14) expression -> ALEATORIO . PARENTESES_ESQ expression PARENTESES_DIR

    PARENTESES_ESQ  shift and go to state 23


state 17

    (5) statement -> ESCREVER PARENTESES_ESQ expression . PARENTESES_DIR PONTO_E_VIRGULA
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

    PARENTESES_DIR  shift and go to state 24
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20


state 18

    (4) statement -> IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA .

    IDENTIFICADOR   reduce using rule 4 (statement -> IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA .)
    ESCREVER        reduce using rule 4 (statement -> IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA .)
    $end            reduce using rule 4 (statement -> IDENTIFICADOR ATRIBUICAO expression PONTO_E_VIRGULA .)


state 19

    (10) expression -> expression OPERADOR_ARITMETICO . expression
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 25

state 20

    (11) expression -> expression CONCATENACAO . expression
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 26

state 21

    (12) expression -> PARENTESES_ESQ expression . PARENTESES_DIR
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

    PARENTESES_DIR  shift and go to state 27
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20


state 22

    (13) expression -> ENTRADA PARENTESES_ESQ . PARENTESES_DIR

    PARENTESES_DIR  shift and go to state 28


state 23

    (14) expression -> ALEATORIO PARENTESES_ESQ . expression PARENTESES_DIR
    (6) expression -> . IDENTIFICADOR
    (7) expression -> . NUMERO
    (8) expression -> . STRING
    (9) expression -> . INTERPOLATED_STRING
    (10) expression -> . expression OPERADOR_ARITMETICO expression
    (11) expression -> . expression CONCATENACAO expression
    (12) expression -> . PARENTESES_ESQ expression PARENTESES_DIR
    (13) expression -> . ENTRADA PARENTESES_ESQ PARENTESES_DIR
    (14) expression -> . ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR

    IDENTIFICADOR   shift and go to state 9
    NUMERO          shift and go to state 11
    STRING          shift and go to state 12
    INTERPOLATED_STRING shift and go to state 13
    PARENTESES_ESQ  shift and go to state 14
    ENTRADA         shift and go to state 15
    ALEATORIO       shift and go to state 16

    expression                     shift and go to state 29

state 24

    (5) statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR . PONTO_E_VIRGULA

    PONTO_E_VIRGULA shift and go to state 30


state 25

    (10) expression -> expression OPERADOR_ARITMETICO expression .
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

  ! shift/reduce conflict for OPERADOR_ARITMETICO resolved as shift
  ! shift/reduce conflict for CONCATENACAO resolved as shift
    PONTO_E_VIRGULA reduce using rule 10 (expression -> expression OPERADOR_ARITMETICO expression .)
    PARENTESES_DIR  reduce using rule 10 (expression -> expression OPERADOR_ARITMETICO expression .)
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20

  ! OPERADOR_ARITMETICO [ reduce using rule 10 (expression -> expression OPERADOR_ARITMETICO expression .) ]
  ! CONCATENACAO    [ reduce using rule 10 (expression -> expression OPERADOR_ARITMETICO expression .) ]


state 26

    (11) expression -> expression CONCATENACAO expression .
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

  ! shift/reduce conflict for OPERADOR_ARITMETICO resolved as shift
  ! shift/reduce conflict for CONCATENACAO resolved as shift
    PONTO_E_VIRGULA reduce using rule 11 (expression -> expression CONCATENACAO expression .)
    PARENTESES_DIR  reduce using rule 11 (expression -> expression CONCATENACAO expression .)
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20

  ! OPERADOR_ARITMETICO [ reduce using rule 11 (expression -> expression CONCATENACAO expression .) ]
  ! CONCATENACAO    [ reduce using rule 11 (expression -> expression CONCATENACAO expression .) ]


state 27

    (12) expression -> PARENTESES_ESQ expression PARENTESES_DIR .

    PONTO_E_VIRGULA reduce using rule 12 (expression -> PARENTESES_ESQ expression PARENTESES_DIR .)
    OPERADOR_ARITMETICO reduce using rule 12 (expression -> PARENTESES_ESQ expression PARENTESES_DIR .)
    CONCATENACAO    reduce using rule 12 (expression -> PARENTESES_ESQ expression PARENTESES_DIR .)
    PARENTESES_DIR  reduce using rule 12 (expression -> PARENTESES_ESQ expression PARENTESES_DIR .)


state 28

    (13) expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR .

    PONTO_E_VIRGULA reduce using rule 13 (expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR .)
    OPERADOR_ARITMETICO reduce using rule 13 (expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR .)
    CONCATENACAO    reduce using rule 13 (expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR .)
    PARENTESES_DIR  reduce using rule 13 (expression -> ENTRADA PARENTESES_ESQ PARENTESES_DIR .)


state 29

    (14) expression -> ALEATORIO PARENTESES_ESQ expression . PARENTESES_DIR
    (10) expression -> expression . OPERADOR_ARITMETICO expression
    (11) expression -> expression . CONCATENACAO expression

    PARENTESES_DIR  shift and go to state 31
    OPERADOR_ARITMETICO shift and go to state 19
    CONCATENACAO    shift and go to state 20


state 30

    (5) statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA .

    IDENTIFICADOR   reduce using rule 5 (statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA .)
    ESCREVER        reduce using rule 5 (statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA .)
    $end            reduce using rule 5 (statement -> ESCREVER PARENTESES_ESQ expression PARENTESES_DIR PONTO_E_VIRGULA .)


state 31

    (14) expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR .

    PONTO_E_VIRGULA reduce using rule 14 (expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR .)
    OPERADOR_ARITMETICO reduce using rule 14 (expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR .)
    CONCATENACAO    reduce using rule 14 (expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR .)
    PARENTESES_DIR  reduce using rule 14 (expression -> ALEATORIO PARENTESES_ESQ expression PARENTESES_DIR .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for OPERADOR_ARITMETICO in state 25 resolved as shift
WARNING: shift/reduce conflict for CONCATENACAO in state 25 resolved as shift
WARNING: shift/reduce conflict for OPERADOR_ARITMETICO in state 26 resolved as shift
WARNING: shift/reduce conflict for CONCATENACAO in state 26 resolved as shift
